--- a/TM.RestHour/Views/CrewHealth/DailyTemperatureReading.cshtml
+++ b/TM.RestHour/Views/CrewHealth/DailyTemperatureReading.cshtml
@@ -1,5 +1,6 @@
 ﻿@model TM.RestHour.Models.CrewTimesheetViewModel
 
+
 @{
     ViewBag.Title = "DailyTemperatureReading";
 }
@@ -8,6 +9,9 @@
 <script src="~/Scripts/notify.min.js"></script>
 <script src="~/Scripts/toastr.min.js"></script>
 <link href="~/Content/toastr.min.css" rel="stylesheet" />
+<link href="~/Content/themes/base/datepicker.css" rel="stylesheet" />
+
+
 <style>
     .form-control {
         display: block;
@@ -50,13 +54,112 @@
                     <div class="form-group">
                         <input type="hidden" id="DailyTemperatureReadingID" />
                     </div>
-                    <div class="row">
 
-                        <div class="col-md-12">
-                           
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Crew</label>
+
+                        <div class="row">
+                            <div class="col-sm-4">
+
+
+                                @Html.DropDownListFor(model => model.Crew.ID, (IEnumerable<SelectListItem>)ViewBag.Crew, "Select", new { @class = "form-control", @id = "ddlCrew" })
+                                @*<select id="ddlCrew" name="Id" class="form-control"></select>*@
+                            </div>
 
                         </div>
+
                     </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Date</label>
+
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <input type="text" class="monthYearPicker form-control" id="ReportsDate" placeholder="Select Date" />
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Time</label>
+
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <select name="account" class="form-control m-b" style="width:50%" id="drpGender" required="">
+                                    <option value="">Select</option>
+                                    <option value="0000">00:00</option>
+                                    <option value="0030">00:30</option>
+                                    <option value="0100">01:00</option>
+                                    <option value="0130">01:30</option>
+                                    <option value="0200">02:00</option>
+                                    <option value="0230">02:30</option>
+                                    <option value="0300">03:00</option>
+                                    <option value="0330">03:30</option>
+                                    <option value="0400">04:00</option>
+                                    <option value="0430">04:30</option>
+                                    <option value="0500">05:00</option>
+                                    <option value="0530">05:30</option>
+                                    <option value="0600">06:00</option>
+                                    <option value="0630">06:30</option>
+                                    <option value="0700">07:00</option>
+                                    <option value="0730">07:30</option>
+                                    <option value="0800">08:00</option>
+                                    <option value="0830">08:30</option>
+                                    <option value="0900">09:00</option>
+                                    <option value="0930">09:30</option>
+                                    <option value="1000">10:00</option>
+                                    <option value="1030">10:30</option>
+                                    <option value="1100">11:00</option>
+                                    <option value="1130">11:30</option>
+                                    <option value="1200">12:00</option>
+                                    <option value="1230">12:30</option>
+                                    <option value="1300">13:00</option>
+                                    <option value="1330">13:30</option>
+                                    <option value="1400">14:00</option>
+                                    <option value="1430">14:30</option>
+                                    <option value="1500">15:00</option>
+                                    <option value="1530">15:30</option>
+                                    <option value="1600">16:00</option>
+                                    <option value="1630">16:30</option>
+                                    <option value="1700">17:00</option>
+                                    <option value="1730">17:30</option>
+                                    <option value="1800">18:00</option>
+                                    <option value="1830">18:30</option>
+                                    <option value="1900">19:00</option>
+                                    <option value="1930">19:30</option>
+                                    <option value="2000">20:00</option>
+                                    <option value="2030">20:30</option>
+                                    <option value="2100">21:00</option>
+                                    <option value="2130">21:30</option>
+                                    <option value="2200">22:00</option>
+                                    <option value="2230">22:30</option>
+                                    <option value="2300">23:00</option>
+                                    <option value="2330">23:30</option>
+
+
+                                </select>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Temperature</label>
+
+                        <div class="row">
+                            <div class="col-sm-2">
+                                <input type="text" placeholder="Temperature" class="form-control" id="txtTemperature" />
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="form-group" style="margin-bottom: 18px;">
+                        <button type="button" class="button1" id="btnAdd" onclick="" style="width:100px; float: left ;">Add</button>
+                        
+                       
+                    </div>
+
                 </form>
             </div>
         </div>
@@ -71,8 +174,28 @@
     <script type="text/javascript">
 
         $(document).ready(function () {
-     
+            $("#ReportsDate").datepicker({
+
+                changeMonth: true,
+                changeYear: true,
+                //showButtonPanel: true,
+                dateFormat: 'd-M-yy',
+                onClose: function (dateText, inst) {
+
+                    if ($('#ReportsDate').val() != '') {
+                        //$('#btnPrint').attr('disabled', false);
+                        $('#btnAdd').attr('disabled', false);
+                    }
+                    else {
+
+                        $('#ReportsDate').one('change', function () {
+                            // $('#btnPrint').attr('disabled', false);
+                            $('#btnAdd').attr('disabled', false);
+                        });
+                    }
+                }
+            });
         });
-        //alert('hi');
+                //alert('hi');
     </script>
 }
