--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -505,8 +505,8 @@
                             <b style="color:red;">Medical Assist</b><i class="fa fa-angle-down" style="padding: 0 10px;"></i>
                         </a>
                         <ul class="dropdown-menu" role="menu">
-                            <li><a href='@Url.Action("MedicalTreatment", "CrewHealth")'>Vessel Details</a></li>
-                            <li><a href='@Url.Action("MedicalTreatment", "CrewHealth")'>Patient Details</a></li>
+                            <li><a href='@Url.Action("VesselDetails", "CrewHealth")'>Vessel Details</a></li>
+                            <li><a href='@Url.Action("PatientDetails", "CrewHealth")'>Patient Details</a></li>
                         </ul>
                     </li>
 
