--- a/TM.RestHour/Views/CrewHealth/DailyTemperatureReading.cshtml
+++ b/TM.RestHour/Views/CrewHealth/DailyTemperatureReading.cshtml
@@ -150,7 +150,12 @@
                         <div class="row">
                             <div class="col-sm-2">
                                 <input type="text" placeholder="Temperature" class="form-control" id="txtTemperature" />
-                            </div>
+                                <select name="temperature" class="form-control m-b" style="width:50%" id="drpTemperature" required="">
+                                    <option value="">Select</option>
+                                    <option value="Centigrade">Centigrade</option>
+                                    <option value="Fahrenheit">Fahrenheit</option>
+                                    </select>
+</div>
                         </div>
 
                     </div>
