--- a/TM.RestHour/Views/CrewHealth/DailyTemperatureReading.cshtml
+++ b/TM.RestHour/Views/CrewHealth/DailyTemperatureReading.cshtml
@@ -6,13 +6,22 @@
 }
 
 <script src="~/Scripts/Consultant.js"></script>
-<script src="~/Scripts/notify.min.js"></script>
-<script src="~/Scripts/toastr.min.js"></script>
-<link href="~/Content/toastr.min.css" rel="stylesheet" />
+
+<link href="~/Content/DataTables/css/jquery.dataTables.min.css" rel="stylesheet" />
+<link href="~/Content/DataTables/css/select.dataTables.min.css" rel="stylesheet" />
+<link href="~/Content/DataTables/css/rowReorder.dataTables.min.css" rel="stylesheet" />
+<link href="~/Content/themes/base/jquery-ui.css" rel="stylesheet" />
+<link href="dist/dual-listbox.css" rel="stylesheet">
+<link href="~/link/css/rank.css" rel="stylesheet" />
+
 <link href="~/Content/themes/base/datepicker.css" rel="stylesheet" />
+
 <link href="~/Content/plugin/datepicker/datepicker.css" rel="stylesheet" />
 <link href="~/Content/plugin/datepicker/css/pickmeup.css" rel="stylesheet" />
 
+<script src="~/Scripts/notify.min.js"></script>
+<script src="~/Scripts/toastr.min.js"></script>
+<link href="~/Content/toastr.min.css" rel="stylesheet" />
 
 
 <script src="~/Scripts/CrewHealth.js"></script>
@@ -196,14 +205,17 @@
     <script type="text/javascript">
 
         $(document).ready(function () {
-            $("#ReportsDate").datepicker({
-
-                changeMonth: true,
-                changeYear: true,
-                dateFormat: 'd-M-yy',
-
-            });
+           
         });
+
+        $("#ReportsDate").datepicker({
+
+            changeMonth: true,
+            changeYear: true,
+            dateFormat: 'd-M-yy',
+
+        });
+
                             //alert('hi');
     </script>
 }
