--- a/TM.RestHour/Views/Equipments/Index.cshtml
+++ b/TM.RestHour/Views/Equipments/Index.cshtml
@@ -184,6 +184,7 @@
 
                         </div>
                     </div>
+                    <button type="button" class="button1" style="width:auto">Download Medical Equipment</button><br /><br />
                 </div>
                 <div class="col-md-3 bac">
                     <div class="">
