--- a/TM.RestHour/Views/Equipments/Index2.cshtml
+++ b/TM.RestHour/Views/Equipments/Index2.cshtml
@@ -65,7 +65,7 @@
                         <div class="">
                             <div style="margin:0 auto" class="tablecontainer">
                                 <button type="button" class="button1" data-toggle="modal" data-target="#myModal" onclick="clearTextBox2();">Add Medicine</button><br /><br />
-                               
+
                                 <input type="hidden" id="hdnrole" />
                                 <table id="Medicinetable" class="display" cellspacing="0" width="100%">
                                     <thead>
@@ -174,7 +174,9 @@
                                             </div>
                                         </div>
                                     </div>
+
                                 </div>
+                               <button type="button" class="button1" style="width:auto">Download Medical Inventory</button><br /><br />
                             </div>
                         </div>
                     </div>
