--- a/TM.RestHour/Views/Equipments/Index2.cshtml
+++ b/TM.RestHour/Views/Equipments/Index2.cshtml
@@ -176,7 +176,7 @@
                                     </div>
 
                                 </div>
-                               <button type="button" class="button1" style="width:auto">Download Medical Inventory</button><br /><br />
+                               <button type="button" class="button1" style="width:auto" id="btnDownloadInventory">Download Medical Inventory</button><br /><br />
                             </div>
                         </div>
                     </div>
