--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -493,7 +493,7 @@
                             }
                             <li><a href='@Url.Action("Index", "Reports")'>Monthly Work Hours</a></li>
                             <li><a href='@Url.Action("WorkAndRestHours", "Reports")'>Compliance Report</a></li>
-
+                            <li><a href='@Url.Action("GetCrewTemperaturePageWiseByCrewID", "CrewHealth")'>Crew Temperature Report</a></li>
                         </ul>
                     </li>
 
