--- a/TM.RestHour/Views/CrewHealth/MedicineAvailableOnBoard.cshtml
+++ b/TM.RestHour/Views/CrewHealth/MedicineAvailableOnBoard.cshtml
@@ -1,6 +1,8 @@
-﻿@model TM.RestHour.Models.CrewTimesheetViewModel
+﻿
+
+@model TM.RestHour.Models.CrewTimesheetViewModel
 @{
-    ViewBag.Title = "UploadJoiningMedical";
+    ViewBag.Title = "MedicineAvailableOnBoard";
 }
 
 
@@ -9,7 +11,7 @@
 
     <div class="row">
         <div class="col-md-6">
-            <h2 class="ta">Upload Joining Medical</h2>
+            <h2 class="ta">Medicine Available On Board</h2>
         </div>
         <div class="col-md-6">
             <div class="import">
@@ -18,7 +20,7 @@
 
 
                         Upload
-                        @using (Html.BeginForm("UploadJoiningMedical", "CrewHealth", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                        @using (Html.BeginForm("MedicineAvailableOnBoard", "CrewHealth", FormMethod.Post, new { enctype = "multipart/form-data" }))
                         {
                             <div class="panel b">
                                 <div class="form-group">
@@ -117,4 +119,6 @@
 
 
 }
+
+
 
