--- a/TM.RestHour/Views/CrewHealth/PatientDetails.cshtml
+++ b/TM.RestHour/Views/CrewHealth/PatientDetails.cshtml
@@ -31,11 +31,11 @@
 
                 <div class="col-md-4">
                     @*<div class="form-group">
-                    <label for="Name Of Vessel">Name Of Vessel</label>
-                    <div class="form-control">
-                        @System.Web.HttpContext.Current.Session["ShipName"].ToString()
-                    </div>
-                </div>*@
+                            <label for="Name Of Vessel">Name Of Vessel</label>
+                            <div class="form-control">
+                                @System.Web.HttpContext.Current.Session["ShipName"].ToString()
+                            </div>
+                        </div>*@
                     <div class="form-group">
                         <label for="Crew">Crew</label>
                         @Html.HiddenFor(model => model.Crew.ID, new { id = "hdnCrewId", value = Model.Crew.ID })
@@ -116,20 +116,20 @@
                     <h4>Vital statistics</h4>
 
                     <div class="col-md-6">
-                         @*<div class="form-group" style="width: 100%;">
-                            <label for="Temperature">Temperature</label>
-                        </div>
-                       <div class="form-group" style="width: 100%;">
-                            <div class="col-md-6" id="sideform">
-                                <input type="text" style="width: 150%;" class="form-control" id="Temperature" placeholder="Temperature" />
-                            </div>
-                            <div class="col-md-5" id="sideform">
-                                <select name="Addiction" style="width: 100%;" class="form-control" id="Addiction">
-                                    <option value="C">°C</option>
-                                    <option value="F">°F</option>
-                                </select>
-                            </div>
-                        </div>*@
+                        @*<div class="form-group" style="width: 100%;">
+                                 <label for="Temperature">Temperature</label>
+                             </div>
+                            <div class="form-group" style="width: 100%;">
+                                 <div class="col-md-6" id="sideform">
+                                     <input type="text" style="width: 150%;" class="form-control" id="Temperature" placeholder="Temperature" />
+                                 </div>
+                                 <div class="col-md-5" id="sideform">
+                                     <select name="Addiction" style="width: 100%;" class="form-control" id="Addiction">
+                                         <option value="C">°C</option>
+                                         <option value="F">°F</option>
+                                     </select>
+                                 </div>
+                             </div>*@
                         <div class="form-group" style="width: 100%;">
                             <label for="Pulse">Pulse (Beats/Minute)</label>
                             <input type="text" class="form-control" id="Pulse" placeholder="Pulse (bpm)" />
@@ -156,15 +156,15 @@
 
                     <div class="col-md-6">
                         @*<div class="form-group" style="width: 100%;">
-                            <label for="Mode">Mode</label>
-                            <select name="Mode" style="width: 100%;" class="form-control" id="Mode">
-                                <option value="">Select</option>
-                                <option value="Oral">Oral</option>
-                                <option value="Rectum">Rectum</option>
-                                <option value="Forehead">Forehead</option>
-                                <option value="Armpit">Armpit</option>
-                            </select>
-                        </div>*@
+                                <label for="Mode">Mode</label>
+                                <select name="Mode" style="width: 100%;" class="form-control" id="Mode">
+                                    <option value="">Select</option>
+                                    <option value="Oral">Oral</option>
+                                    <option value="Rectum">Rectum</option>
+                                    <option value="Forehead">Forehead</option>
+                                    <option value="Armpit">Armpit</option>
+                                </select>
+                            </div>*@
                         <div class="form-group" style="width: 100%;">
                             <label for="RespiratoryRate">Respiratory Rate</label>
                             <input type="text" class="form-control" id="RespiratoryRate" placeholder="Respiratory Rate" />
@@ -269,12 +269,24 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <input type="checkbox" name="uploaddoc" id="JoiningMedical" value="1"> Joining Medical </br>
-                        <input type="checkbox" name="uploaddoc" id="MedicineAvailableOnBoard" value="1"> Medicine Available On Board </br>
-                        <input type="checkbox" name="uploaddoc" id="MedicalEquipmentOnBoard" value="1">  Medical Equipment On Board  </br>
-                        <input type="checkbox" name="uploaddoc" id="MedicalHistory" value="1"> Medical History   </br>
-                        <input type="checkbox" name="uploaddoc" id="WorkAndRestHourLatestRecord" value="1"> Work And Rest Hour Latest Record   </br>
-                        <input type="checkbox" name="uploaddoc" id="PreExistingMedicationPrescription" value="1">  Pre Existing Medication Prescription  </br>
+                        <input type="checkbox" name="uploaddoc" id="JoiningMedical" value="1"> Joining Medical
+                        <button type="button" onclick="location.href='@Url.Action("UploadJoiningMedical", "CrewHealth")';return false;">Upload </button>
+                        </br>
+                        <input type="checkbox" name="uploaddoc" id="MedicineAvailableOnBoard" value="1"> Medicine Available On Board
+                        <button type="button" onclick="location.href='@Url.Action("MedicineAvailableOnBoard", "CrewHealth")';return false;">Upload </button>
+                        </br>
+                        <input type="checkbox" name="uploaddoc" id="MedicalEquipmentOnBoard" value="1">  Medical Equipment On Board
+                        <button type="button" onclick="location.href='@Url.Action("MedicalEquipmentOnBoard", "CrewHealth")';return false;">Upload </button>
+                        </br>
+                        <input type="checkbox" name="uploaddoc" id="MedicalHistoryUpload" value="1"> Medical History Upload
+                        <button type="button" onclick="location.href='@Url.Action("MedicalHistoryUpload", "CrewHealth")';return false;">Upload </button>
+                        </br>
+                        <input type="checkbox" name="uploaddoc" id="WorkAndRestHourLatestRecord" value="1"> Work And Rest Hour Latest Record
+                        <button type="button" onclick="location.href='@Url.Action("WorkAndRestHourLatestRecord", "CrewHealth")';return false;">Upload</button>
+                        </br>
+                        <input type="checkbox" name="uploaddoc" id="PreExistingMedicationPrescription" value="1">  Pre Existing Medication Prescription
+                        <button type="button" onclick="location.href='@Url.Action("PreExistingMedicationPrescription", "CrewHealth")';return false;">Upload </button>
+                        </br>
                     </div>
                 </div>
 
@@ -329,17 +341,17 @@
 
 
                 @*<div class="col-md-3" style="padding: 10px; margin-top:68px;">
-                    <button type="button" class="button1" id="btnAdd" onclick="return SaveCIRM();">Add</button>
-                </div>*@
+                        <button type="button" class="button1" id="btnAdd" onclick="return SaveCIRM();">Add</button>
+                    </div>*@
             </div>
 
 
 
             @*<script>
-            function openBody() {
-                window.open("@Url.Action("TestBody", "CrewHealth")");
-            }
-            </script>*@
+                function openBody() {
+                    window.open("@Url.Action("TestBody", "CrewHealth")");
+                }
+                </script>*@
 
 
 
