--- a/TM.RestHour/Views/CrewHealth/PreExistingMedicationPrescription.cshtml
+++ b/TM.RestHour/Views/CrewHealth/PreExistingMedicationPrescription.cshtml
@@ -1,6 +1,7 @@
-﻿@model TM.RestHour.Models.CrewTimesheetViewModel
+﻿
+@model TM.RestHour.Models.CrewTimesheetViewModel
 @{
-    ViewBag.Title = "UploadJoiningMedical";
+    ViewBag.Title = "PreExistingMedicationPrescription";
 }
 
 
@@ -9,7 +10,7 @@
 
     <div class="row">
         <div class="col-md-6">
-            <h2 class="ta">Upload Joining Medical</h2>
+            <h2 class="ta">Pre Existing Medication Prescription</h2>
         </div>
         <div class="col-md-6">
             <div class="import">
@@ -18,7 +19,7 @@
 
 
                         Upload
-                        @using (Html.BeginForm("UploadJoiningMedical", "CrewHealth", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                        @using (Html.BeginForm("PreExistingMedicationPrescription", "CrewHealth", FormMethod.Post, new { enctype = "multipart/form-data" }))
                         {
                             <div class="panel b">
                                 <div class="form-group">
@@ -117,4 +118,10 @@
 
 
 }
+
+
+
+
+
+
 
