--- a/TM.RestHour/Views/CrewHealth/ReportDailyTemperature.cshtml
+++ b/TM.RestHour/Views/CrewHealth/ReportDailyTemperature.cshtml
@@ -3,13 +3,25 @@
 @{
     ViewBag.Title = "ReportDailyTemperature";
 }
-
-<h2>ReportDailyTemperature</h2>
-
+    <script src="~/Scripts/jquery-3.2.1.js"></script>
 <link href="~/Content/jquery-ui.min.css" rel="stylesheet" />
+<link href="~/Content/DataTables/css/jquery.dataTables.min.css" rel="stylesheet" />
+<link href="~/Content/DataTables/css/select.dataTables.min.css" rel="stylesheet" />
+<link href="~/Content/DataTables/css/rowReorder.dataTables.min.css" rel="stylesheet" />
+<link href="~/Content/themes/base/jquery-ui.css" rel="stylesheet" />
+<link href="dist/dual-listbox.css" rel="stylesheet">
+<link href="~/link/css/rank.css" rel="stylesheet" />
+
 <link href="~/Content/themes/base/datepicker.css" rel="stylesheet" />
 
-<link href="~/link/css/crewlistr.css" rel="stylesheet" />
+<link href="~/Content/plugin/datepicker/datepicker.css" rel="stylesheet" />
+<link href="~/Content/plugin/datepicker/css/pickmeup.css" rel="stylesheet" />
+
+<script src="~/Scripts/notify.min.js"></script>
+<script src="~/Scripts/toastr.min.js"></script>
+<link href="~/Content/toastr.min.css" rel="stylesheet" />
+
+
 <script src="~/Scripts/CrewHealth.js"></script>
 <body style="background-image: url(../background/report.jpg);
     background-size: cover;">
@@ -40,7 +52,8 @@
                                     <div class="form-group">
                                         <div>
                                             <div class="col-md-6" id="sideform">
-                                                <button type="button" class="button1" id="btnAdd" onclick="SetUpGridCrewTemperatureReport(CrewID)">Show Report</button>
+                                                <button type="button" class="button1" id="btnAdd" onclick="return SetUpGridCrewTemperatureReport(CrewID)">Show Report</button>
+
                                             </div>
 
                                             <div class="col-md-6" id="sideform">
@@ -76,58 +89,42 @@
                 </div>
             </div>
         </div>
-        </div>
+    </div>
 </body>
+
+
+
 @section Scripts
 {
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/jqueryui")
     @Styles.Render("~/Content/themes/base/css")
 
+    <script src="~/Scripts/toastr.min.js"></script>
+    <link href="~/Content/toastr.min.css" rel="stylesheet" />
 
-    <script src="~/Scripts/pdfmake.min.js"></script>
-    <script src="~/Scripts/vfs_fonts.js"></script>
-    @*<script type="text/javascript">
+    <script type="text/javascript">
+        //alert('hi');
 
+        $(document).ready(function () {
 
-                        $(document).ready(function () {
+            //SetUpGridCrewTemperatureReport(CrewID);
 
+        });
 
-                            //SetUpGridCrewTemperatureReport();
+        //$("#btnAdd").click(function () {
+        //    SetUpGridCrewTemperatureReport(CrewID);
+        //});
 
+            //$("#ExpiryDate").datepicker({
 
-                            $(function () {
-                                $('.monthYearPicker').datepicker({
-                                    changeMonth: true,
-                                    changeYear: true,
-                                    showButtonPanel: true,
-                                    dateFormat: 'MM yy'
-                                }).focus(function () {
-                                    var thisCalendar = $(this);
-                                    $('.ui-datepicker-calendar').detach();
-                                    $('.ui-datepicker-close').click(function () {
-                                        var month = $("#ui-datepicker-div .ui-datepicker-month :selected").val();
-                                        var year = $("#ui-datepicker-div .ui-datepicker-year :selected").val();
-                                        thisCalendar.datepicker('setDate', new Date(year, month, 1));
-                                    });
-                                });
-                            });
+            //    changeMonth: true,
+            //    changeYear: true,
+            //    dateFormat: 'd-M-yy',
 
+            //});
 
+    </script>
 
-                        });
-
-
-
-
-          //              $("#btnPrint").click(function () {
-                            ////PrintTest('');
-          //                  Popup2('');
-          //              });
-
-          //              $("#btnAdd").click(function () {
-          //                  SetUpGridReport();
-          //              });
-
-        </script>*@
 }
+
